made the certificates to be clickable

--- a/experience.html
+++ b/experience.html
@@ -252,8 +252,10 @@
                                 Participated as a Frontend Developer using React. Worked on implementing a web application based on provided Figma designs within a 48-hour timeframe.
                             </p>
                             <div class="relative overflow-hidden rounded-lg group-hover:ring-2 ring-teal-600/20 dark:ring-[#992800]/20 transition-all duration-300 h-[250px] mt-auto">
-                                <img src="assets/certificates/Sava-osiguruvanje_certificate.webp" alt="Sava Osiguruvanje Certificate" class="w-full h-full object-cover shadow-md transition-transform duration-500 group-hover:scale-105">
-                                <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                                <a href="assets/certificates/Sava-osiguruvanje_certificate.webp" target="_blank" rel="noopener noreferrer" class="block w-full h-full">
+                                    <img src="assets/certificates/Sava-osiguruvanje_certificate.webp" alt="Sava Osiguruvanje Certificate" class="w-full h-full object-cover shadow-md transition-transform duration-500 group-hover:scale-105">
+                                    <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -272,8 +274,10 @@
                                 Served as a Frontend Developer using React. Successfully delivered a web application following Figma designs in a 48-hour competition.
                             </p>
                             <div class="relative overflow-hidden rounded-lg group-hover:ring-2 ring-teal-600/20 dark:ring-[#992800]/20 transition-all duration-300 h-[250px] mt-auto">
-                                <img src="assets/certificates/Sparkasse_certificate.webp" alt="Sparkasse Certificate" class="w-full h-full object-cover shadow-md transition-transform duration-500 group-hover:scale-105">
-                                <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                                <a href="assets/certificates/Sparkasse_certificate.webp" target="_blank" rel="noopener noreferrer" class="block w-full h-full">
+                                    <img src="assets/certificates/Sparkasse_certificate.webp" alt="Sparkasse Certificate" class="w-full h-full object-cover shadow-md transition-transform duration-500 group-hover:scale-105">
+                                    <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                                </a>
                             </div>
                         </div>
                     </div>
