--- a/index.html
+++ b/index.html
@@ -335,6 +335,10 @@
                         <h4 class="font-semibold">React</h4>
                     </div>
                     <div class="p-6 text-center bg-white dark:bg-[#363636] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                        <img src="assets/svg/typescript.svg" alt="TypeScript logo" class="mx-auto mb-4 w-12 h-12">
+                        <h4 class="font-semibold">TypeScript</h4>
+                    </div>
+                    <div class="p-6 text-center bg-white dark:bg-[#363636] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <i class="mb-4 text-4xl text-gray-700 dark:text-gray-300 fas fa-code"></i>
                         <h4 class="font-semibold">API Development</h4>
                     </div>
